# AA

./: README.md
compiler/: README.md  compiler_base.py  simple.py
interpreter/: LICENSE  Namespaces.hs  Opcodes.hs  Opcodes_Test.hs  Primitives.hs  Setup.hs  TestException.hs  aainterpreter.cabal  advancedassembly.cabal  interpreter.hs
interpreter/src/exec/: interpreter.hs
interpreter/src/main/: BitSeries.hs  DataType.hs  DataTypePrime.hs  Evaluate.hs  LZipper.hs  Namespaces.hs  Opcodes.hs  Primitives.hs  Statement.hs  interpreter.hs
interpreter/src/main/DataType/: Util.hs
interpreter/src/main/Language/AA/: AdvancedAssembly.hs  BitSeries.hs  DataType.hs  Evaluate.hs  Opcodes.hs  Pretty.hs  Statement.hs
interpreter/src/main/Language/AA/DataType/: Util.hs
interpreter/src/test/: BitSeries_Test.hs  DataTypePrime_Test.hs  DataType_Test.hs  DataType_Util_Test.hs  Evaluate_Test.hs  LZipper_Test.hs  Namespaces_Test.hs  Opcodes_Test.hs  Primitives_Test.hs  Statement_Test.hs  TestException.hs  TestUtil.hs  tests.hs
specification/: overview  specifaction  specification
