name:                advancedassembly
version:             0.5.2
synopsis:            An interpreter for Advanced Assembly.
description:         The Advanced Assembly Interpreter is the default (and, as 
                     of now, only) interpreter for the programming language 
                     Advanced Assembly. This implementation is programmed in 
                     Haskell.
license:             MIT
license-file:        LICENSE
author:              Joshua Brot
maintainer:          joshuabrot@gmail.com
copyright:           Copyright: (c) 2014-2015 Joshua Brot
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.7 && <4.8, containers >=0.5 && <0.6,
                       split >=0.2 && <0.3, parsec >=3.1 && <3.2 
  exposed-modules:     Language.AA.AdvancedAssembly, Language.AA.BitSeries,
                       Language.AA.Opcodes, Language.AA.DataType, 
                       Language.AA.DataType.Util, Language.AA.Statement, 
                       Language.AA.Evaluate
  hs-source-dirs:      src/main
  default-language:    Haskell2010
executable aainterpreter
  main-is:             interpreter.hs
  build-depends:       base >=4.7 && <4.8, advancedassembly,
                       optparse-applicative >= 0.11 && <0.12,
                       bytestring  >=0.10 && <0.11, mtl >=2.2 && <2.3
  hs-source-dirs:      src/exec
  default-language:    Haskell2010

test-suite tests
  main-is:             tests.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/test
  build-depends:       base >=4.7 && <4.8, advancedassembly,
                       containers >=0.5 && <0.6, HUnit >=1.2 && <1.3,
                       parsec >=3.1 && <3.2
  default-language:    Haskell2010
